namespace main;

public abstract class Animal
{
    public abstract string MakeSound();
}