namespace main;

public interface IDisplayable
{
    string GetDisplayName();
}